<resources>
    <string name="app_name">Hi WHU</string>
    <string name="title_home">主页</string>
    <string name="title_notice">消息</string>
    <string name="title_user">我的</string>
    <string name="title">活动</string>

    <string name="location">Location Page</string>
    <string name="add">Add Activity Page</string>
    <string name="search">search Page</string>

    <string name="contentDescription">活动宣传图</string>
    <string name="card_title">这是一个活动</string>
    <string name="card_time">时间：</string>
    <string name="card_location">地点：</string>
    <string name="card_btn">我要报名</string>

</resources>
