<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/tab_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <android.support.v7.widget.CardView
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:cardCornerRadius="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/card_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:contentDescription="@string/contentDescription"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_title"
            app:layout_constraintLeft_toRightOf="@id/card_img" />

        <TextView
            android:id="@+id/card_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_time" />

        <TextView
            android:id="@+id/card_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_location" />

        <Button
            android:id="@+id/card_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_btn" />
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>